--- a/SUDOKU/einde.html
+++ b/SUDOKU/einde.html
@@ -1,7 +1,7 @@
 <!-- html document begint altijd met een ! + DOCTYPE -->
 <!DOCTYPE html>
 <!-- taal van de pagina zetten waar lang voor laguage staat -->
-<html lang="en">
+<html lang="nl">
 
 <head>
 
@@ -16,8 +16,8 @@
 
 <body>
     <div id="spel3">
-    <p> GOOD JOB  ! </p>
-    <p> THANK YOU FOR PLAYING</p>
+    <p> GOED GESPEELD  ! </p>
+    <p>BEDANKT VOOR HET SPELEN</p>
         </div>
 </body>
 </html>
