--- a/SUDOKU/index.html
+++ b/SUDOKU/index.html
@@ -1,7 +1,7 @@
 <!-- html document begint altijd met een ! + DOCTYPE -->
 <!DOCTYPE html>
 <!-- taal van de pagina zetten waar lang voor laguage staat -->
-<html lang="en">
+<html lang="nl">
 
 <head>
 
